.k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: people-api
  labels:
    app: people-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: people-api
  template:
    metadata:
      labels:
        app: people-api
    spec:
      containers:
      - name: people-api
        image: mcqueide/people-api:v1.0.0
        ports:
        - containerPort: 8080
        
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.25"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          failureThreshold: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          periodSeconds: 20

        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
