.k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: people-api
spec:
  selector:
    app: people-api
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      name: http
