.k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: people-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: people-api
            port:
              number: 8080
      - path: /api-docs
        pathType: Exact
        backend:
          service:
            name: people-api
            port:
              number: 8080
      - path: /actuator
        pathType: Prefix
        backend:
          service:
            name: people-api
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: people-api
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: people-frontend
            port:
              number: 3000
